pratical/final/challenges/xor-otp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd-2021-chall-xor-otp-service
  namespace: challs
  labels:
    ctfd.chall.service: ctfd-2021-chall-xor-otp-service
spec:
  selector:
    ctfd.chall.pod: ctfd-2021-xor-otp-pod
  type: ClusterIP
  ports:
  - name: 'http'
    port: 47400
    targetPort: 47400
